--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
 <div id="game" class="container">
   <div class="jumbotron">
+    <h1 class="display-3">Manuels Pokerwatch</h1>
+    <p class="lead">This is a simple but powerful pokerwatch.</p>
+    <hr class="my-2">
     <div id="watch" style="display: none;">
         <ul class="list-group">
         <li class="list-group-item"><div><span id="time"></span> Minutes until end of round!</div></li>
@@ -29,8 +32,7 @@
   #game {
       text-align: center;
   }
-  #input {
+  #timeinput {
     text-align:center;
-    width: 400;
   }
 </style>
