--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div id="game" class="container">
   <div class="jumbotron">
     <h1 class="display-3">Manuels Pokerwatch</h1>
-    <p class="lead">This is a simple but powerful pokerwatch.</p>
+    <p class="lead">This is a simple yet powerful pokerwatch.</p>
     <hr class="my-2">
     <div id="watch" style="display: none;">
         <ul class="list-group">
