--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li class="list-group-item"><div>Small Blind: <span id="smallBlind"></span></div></li>
         <li class="list-group-item"><div>Big Blind: <span id="bigBlind"></span></div></li>
         </ul>
+        <button type="button" class="btn btn-primary btn-lg" id="reset" onclick="window.location.reload()">New Game</button>
     </div>
 
     <div id="input" class="form-group">
