--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="watch" style="display: none;">
         <ul class="list-group">
         <li class="list-group-item"><div><span id="time"></span> Minutes until end of round!</div></li>
-        <li class="list-group-item"><div><span id="round">1</span> Round</div></li>
+        <li class="list-group-item"><div>Round: <span id="round">1</span></div></li>
         <li class="list-group-item"><div>Small Blind: <span id="smallBlind"></span></div></li>
         <li class="list-group-item"><div>Big Blind: <span id="bigBlind"></span></div></li>
         </ul>
