--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li class="list-group-item"><div><span id="time"></span> Minutes until end of round!</div></li>
         <li class="list-group-item"><div>Round: <span id="round">1</span></div></li>
         <li class="list-group-item"><div>Small Blind: <span id="smallBlind"></span></div></li>
-        <li class="list-group-item"><div>Big Blind: <span id="bigBlind"></span></div></li>
+        <li class="list-group-item"><div>Big Blind: &f0d6 <span id="bigBlind"></span></div></li>
         </ul>
         <button type="button" class="btn btn-primary btn-lg" id="reset" onclick="window.location.reload()">New Game</button>
     </div>
