--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <hr class="my-2">
     <div id="watch" style="display: none;">
         <ul class="list-group">
-        <li class="list-group-item"><div><span id="time"></span> Minutes until end of round!</div></li>
-        <li class="list-group-item"><div>Round: <span id="round">1</span></div></li>
-        <li class="list-group-item"><div>Small Blind: <span id="smallBlind"></span></div></li>
-        <li class="list-group-item"><div><i class="fa fa-money" aria-hidden="true"></i><span id="bigBlind"></span></div></li>
+        <li class="list-group-item"><div><span id="time"></span> <i class="fa fa-clock-o" aria-hidden="true"></i>
+</div></li>
+        <li class="list-group-item"><div><i class="fa fa-circle-o-notch" aria-hidden="true"></i> <span id="round">1</span></div></li>
+        <li class="list-group-item"><div><i class="fa fa-money" aria-hidden="true"></i> <span id="smallBlind"></span></div></li>
+        <li class="list-group-item"><div><i class="fa fa-money" aria-hidden="true"></i><i class="fa fa-money" aria-hidden="true"></i> <span id="bigBlind"></span></div></li>
         </ul>
         <button type="button" class="btn btn-primary btn-lg" id="reset" onclick="window.location.reload()">New Game</button>
     </div>
