--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div id="input" class="form-group">
-      <input type="text" placeholder="Time in minutes." maxlength="4" class="form-control" id="timeinput">
+      <input type="number" placeholder="Time in minutes." maxlength="4" class="form-control" id="timeinput">
       <p></p>
       <button type="button" class="btn btn-primary btn-lg" id="start" onclick="startGame()">Start Game</button>
     </div>
