--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="lib/bootstrap.min.js"></script>
   <script src="lib/jquery.js"></script>
 
-  <link href="lib/font-awesome.min.css" rel="stylesheet">
+  <link href="lib/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
   <script type="text/javascript" src="index.js"></script>
 
