--- a/pokerwatch-cordova/platforms/android/assets/www/index.html
+++ b/pokerwatch-cordova/platforms/android/assets/www/index.html
@@ -24,6 +24,7 @@
           <li class="list-group-item"><div><i class="fa fa-money" aria-hidden="true"></i> <i class="fa fa-money" aria-hidden="true"></i> <span id="bigBlind"></span></div></li>
           </ul>
           <button type="button" class="btn btn-primary btn-lg" id="reset" onclick="window.location.reload()">New Game</button>
+          <button type="button" class="btn btn-primary btn-lg" id="pauseresume" onclick="pauseResume()">Pause</button>
       </div>
 
       <div id="input" class="form-group">
